--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.netdoers.zname"
-    android:versionCode="1"
+    android:versionCode="2"
     android:versionName="1.0" >
 
     <uses-sdk
@@ -26,6 +26,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
     
     <application
         android:allowBackup="true"
@@ -36,7 +37,9 @@
         android:theme="@style/Theme.Zname" >
         <activity
             android:name="com.netdoers.zname.ui.IntroActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,6 +48,9 @@
         </activity>
         
         <activity android:name="com.netdoers.zname.ui.MotherActivity"
+            	  android:screenOrientation="portrait"
+            />
+        <activity android:name="com.netdoers.zname.ui.SignUpActivity"
             	  android:screenOrientation="portrait"
             />
         
