--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -65,6 +65,10 @@
             	  android:label="Search"
             />
         
+        <activity android:name="com.netdoers.zname.ui.ProfileActivity"
+            	  android:screenOrientation="portrait"
+            />
+        
         <activity android:name="com.netdoers.zname.contactpicker.ContactPickerManager" 
             	  android:screenOrientation="portrait"
             />
