--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,85 +2,80 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.netdoers.zname"
     android:versionCode="3"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="19" />
 
-        <supports-screens android:resizeable="true"
-                  android:smallScreens="true"
-                  android:normalScreens="true"
-                  android:largeScreens="true"
-                  android:xlargeScreens="true"
-                  android:anyDensity="true">
-    </supports-screens>    
-                  
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" >
+    </supports-screens>
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.STORAGE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.READ_CALL_LOG"/>
-    
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+
     <application
+        android:name="com.netdoers.zname.Zname"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-		android:largeHeap="true"
-		android:name="com.netdoers.zname.Zname"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@style/Theme.Zname" >
         <activity
             android:name="com.netdoers.zname.ui.IntroActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name="com.netdoers.zname.ui.MotherActivity"
-            	  android:screenOrientation="portrait"
-            />
-        <activity android:name="com.netdoers.zname.ui.SignUpActivity"
-            	  android:screenOrientation="portrait"
-            />
-        
-        <activity android:name="com.netdoers.zname.ui.SettingsActivity"
-            	  android:screenOrientation="portrait"
-            	  android:label="Settings"
-            />
-        
-        <activity android:name="com.netdoers.zname.ui.SearchActivity"
-            	  android:screenOrientation="portrait"
-            	  android:label="Search"
-            />
-        
-        <activity android:name="com.netdoers.zname.ui.ProfileActivity"
-            	  android:screenOrientation="portrait"
-            />
-        
-        <activity android:name="com.netdoers.zname.contactpicker.ContactPickerManager" 
-            	  android:screenOrientation="portrait"
-            />
-        
+        <activity
+            android:name="com.netdoers.zname.ui.MotherActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.ui.SignUpActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.ui.SettingsActivity"
+            android:label="Settings"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.ui.SearchActivity"
+            android:label="Search"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.ui.ProfileNotZnameActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.ui.ProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.contactpicker.ContactPickerManager"
+            android:screenOrientation="portrait" />
+
         <provider
             android:name="com.netdoers.zname.sqlite.ZnameDB"
             android:authorities="com.netdoers.zname.SQLite.ZnameDB" />
-        
-        <service
-            android:name="com.netdoers.zname.service.ImportContactsService" 
-            />
-        
+
+        <service android:name="com.netdoers.zname.service.ImportContactsService" />
     </application>
 
 </manifest>
