--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="19" />
+         />
 
     <supports-screens
         android:anyDensity="true"
@@ -77,6 +77,7 @@
             android:authorities="com.netdoers.zname.SQLite.ZnameDB" />
 
         <service android:name="com.netdoers.zname.service.ImportContactsService" />
+        <service android:name="com.netdoers.zname.service.PushPullContactsService" />
     </application>
 
 </manifest>
