--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.netdoers.zname"
-    android:versionCode="5"
+    android:versionCode="7"
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="10" />
@@ -28,6 +28,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
     <application
         android:name="com.netdoers.zname.Zname"
@@ -69,11 +70,9 @@
         <activity
             android:name="com.netdoers.zname.contactpicker.ContactPickerManager"
             android:screenOrientation="portrait" />
-        
-        <activity 
+        <activity
             android:name="com.netdoers.zname.ui.CallLogsDetailsActivity"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="com.netdoers.zname.sqlite.ZnameDB"
@@ -81,10 +80,16 @@
 
         <service android:name="com.netdoers.zname.service.ImportContactsService" />
         <service android:name="com.netdoers.zname.service.PushPullContactsService" />
+        <service android:name="com.netdoers.zname.service.IncomingOutgoingPushService" />
 
         <receiver android:name="com.netdoers.zname.receiver.ReceiverInComingCall" >
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="com.netdoers.zname.receiver.ReceiverOutGoingCall" >
+            <intent-filter>
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
             </intent-filter>
         </receiver>
     </application>
