1. + Added : AddZnameActivity 2. ~ Fixed : Contacts Picker Custom Action Bar. 3. ~ Fixed : Contacts Picker Edit Text background.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,10 +69,16 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.netdoers.zname.contactpicker.ContactPickerManager"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:noHistory="true"
+             />
         <activity
             android:name="com.netdoers.zname.ui.CallLogsDetailsActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.ui.AddZnameActivity"
+            android:screenOrientation="portrait"/>
 
         <provider
             android:name="com.netdoers.zname.sqlite.ZnameDB"
