1. + Added Floating button in Groups Tabs. 2. ~ Change Call Log List Layout. 3. ~ Removed Call Log List on Scroll Listener Floating Menu. 4. + Added Search relevance to Tabs.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -79,6 +79,10 @@
         <activity
             android:name="com.netdoers.zname.ui.AddZnameActivity"
             android:screenOrientation="portrait"/>
+        <activity 
+            android:name="com.netdoers.zname.ui.ProfileUpdateActivity"
+            android:screenOrientation="portrait"
+            />
 
         <provider
             android:name="com.netdoers.zname.sqlite.ZnameDB"
