--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -79,6 +79,10 @@
         <activity
             android:name="com.netdoers.zname.ui.AddZnameActivity"
             android:screenOrientation="portrait"/>
+        <activity 
+            android:name="com.netdoers.zname.ui.ProfileUpdateActivity"
+            android:screenOrientation="portrait"
+            />
 
         <provider
             android:name="com.netdoers.zname.sqlite.ZnameDB"
