--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,20 +69,21 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.netdoers.zname.contactpicker.ContactPickerManager"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysHidden"
             android:noHistory="true"
-             />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name="com.netdoers.zname.ui.CallLogsDetailsActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.netdoers.zname.ui.AddZnameActivity"
-            android:screenOrientation="portrait"/>
-        <activity 
+            android:screenOrientation="portrait" />
+        <activity
             android:name="com.netdoers.zname.ui.ProfileUpdateActivity"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.ui.SignInActivity"
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="com.netdoers.zname.sqlite.ZnameDB"
