--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-17
 android.library.reference.1=..\\actionbarsherlock
-android.library.reference.2=../actionbarsherlock_pulltorefresh
+android.library.reference.2=..\\actionbarsherlock_pulltorefresh
