--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
         android:name="com.netdoers.zname.Zname"
@@ -87,8 +87,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.netdoers.zname.ui.ProfileAddZnameActivity"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.netdoers.zname.ui.ProfileApproveZnameActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.netdoers.zname.ui.SignInActivity"
             android:screenOrientation="portrait" />
@@ -104,7 +106,7 @@
             android:authorities="com.netdoers.zname.SQLite.ZnameDB" />
 
         <service android:name="com.netdoers.zname.service.ImportContactsService" />
-        <service android:name="com.netdoers.zname.service.SyncPhoneBookService"/>
+        <service android:name="com.netdoers.zname.service.SyncPhoneBookService" />
         <service android:name="com.netdoers.zname.service.SyncContactsService" />
         <service android:name="com.netdoers.zname.service.IncomingOutgoingPushService" />
 
