1 - Removed Fixed groups (Friends, Family & Work). 2 + Added Option to create Dynamic Groups.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -76,6 +76,10 @@
         <activity
             android:name="com.netdoers.zname.ui.CallLogsDetailsActivity"
             android:screenOrientation="portrait" />
+        <activity 
+            android:name="com.netdoers.zname.ui.GroupContactsActivity"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name="com.netdoers.zname.ui.AddZnameActivity"
             android:screenOrientation="portrait" />
